# evidence-signal

./: README.md  index.html
evidence-signal/: .cursorrules  .gitignore  README.md  pyproject.toml
evidence-signal/src/evidence_signal/: __init__.py
evidence-signal/tests/: test_version.py
