[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evidence-signal"
version = "0.1.0"
description = "Extract and reason about signals from evidence."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evidence_signal"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
